--- a/style.css
+++ b/style.css
@@ -35,14 +35,13 @@ body{
 .task-detail{
     font-weight: 500;
     font-size: 30px;
-    margin-top: 20px;
 }
 summary {
     list-style: none;
     display: flex;
     justify-content: space-between;
     gap:20px;
-    margin: 15px auto;
+   
 }
 summary::after {
     content: '';
@@ -50,14 +49,17 @@ summary::after {
     width: 25px;
     height: 24px;
     transition: 0.2s;
-    margin-top: 2px;
+    margin-top: 8px;
     margin-right: 20px;
-    }
+ }
 
 details[open]>summary::after {
     transform: rotate(180deg);
     margin-top: 9px;
-   
+   margin-right: 40px;
+}
+details[open]>summary{
+    margin-left: 30px;
 }
 a{
     text-decoration: none;
