--- a/UsabilityHub Clone/style.css
+++ b/UsabilityHub Clone/style.css
@@ -110,6 +110,7 @@ ul{
 .main-nav{
     margin-top: 20px;
     justify-content: space-between;
+    position: relative;
 }
 .company-logo img{
     width: 200px;
@@ -124,6 +125,9 @@ ul{
     justify-content: end;
     gap:40px;
 }
+.toggle-btn{
+    display: none;
+}
 /* header section */
 header{
     padding: 50px var(--padding-inline-section) 0;
@@ -133,19 +137,23 @@ header{
     gap:50px;
 }
 .header-right img{
-    width:600px;
+    width:100%;
 }
 .header-left{
-   max-width: 40vw;
+   width: 40vw;
+   flex-direction: column;
+   gap:20px;
+
 }
-.header-left h1{
+/* .header-left h1{
     margin-top: 120px
 }
 .header-left p{
     margin-top: 8px
-}
+}*/
 .header-left a{
-    margin-top: 10px
+  width:60%;
+  text-align: center;
 }
 /* company section */
 .company-header{
@@ -154,8 +162,9 @@ header{
     color: var(--primary-text-color);
 }
 .logos{
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
+    gap:20px;
 }
 .logo{
     height: 46px;
@@ -176,7 +185,7 @@ header{
 .features-area{
     flex-wrap: wrap;
    justify-content: space-between;
-   gap:40px;
+   gap:20px;
    margin-top: 20px;
 }
 .features-card{
@@ -187,7 +196,7 @@ header{
 }
 .btn{
     margin: auto;
-    width:200px;
+    width:60%;
 }
 /* big feature section */
 .big-feature-section{
@@ -218,11 +227,12 @@ header{
 .example-area{
     justify-content: space-between;
     margin-block: 30px;
+    flex-wrap: wrap;
 }
 .examples-card{
     width:23%;
     position: relative;
-    min-height: 300px;
+    height: 300px;
     background: black;
     background:linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)), url("./asset/asset\ 35.jpeg");
     background-size: cover;
@@ -265,6 +275,10 @@ header{
     color:white;
     margin-top: 20px;
 }
+.button{
+    margin:auto;
+    min-width:100px;
+}
 /* footer */
 footer{
     padding-block: 80px;
@@ -278,6 +292,7 @@ footer{
 .link-column{
     flex-direction: column;
     gap:20px;
+    align-self: auto;
 }
 /* sub footer */
 .sub-footer{
@@ -287,4 +302,109 @@ footer{
 .subfooter-container{
     justify-content: center;
     gap:30px;
+    flex-wrap: wrap;
+}
+
+/* Media querys */
+@media screen and (max-width:991px) {
+    .container{
+        overflow: hidden;
+    }
+    h3{
+    font-size: 1.2rem;
+   }
+    .toggle-btn{
+        display: block;
+    }   
+    .toggle-btn img{
+        height: 28px;
+        width: 28px;
+    } 
+    .main-nav{
+        overflow: initial;
+    }
+    .nav-links{
+        position: absolute;
+    background-color: white;
+     left:-100%;
+     text-align: center;
+        top: 100%;
+        width:100%;
+        padding-block: 20px;
+    }
+    .nav-links.active{
+        left:0;
+    }
+    .nav-links ul{
+        flex-direction: column;
+
+    }
+    
+    .example-area{
+        gap:20px;
+    }
+    .examples-card{
+        width:48%;
+        height: 180px;
+    }
+    .cta-section{
+        padding-block: 80px;
+    }
+}
+@media screen and (max-width:767px) {
+    .header-section{
+        flex-direction: column-reverse;
+        justify-content: flex-start;
+    }
+    .header-left{
+        width: 100%;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+    .header-left a{
+        width:100%;
+        text-align: center;
+      }
+      .features-card{
+        min-width:calc(50% - 10px);
+      }
+      .big-feature-container{
+        flex-direction: column;
+      }
+    
+    .big-feature-container-2{
+      flex-direction: column;
+    }
+    .examples-section{
+        margin-top: 20px;
+    }
+    .footer-container{
+        flex-direction: column;
+        gap:40px;
+        align-items: center;
+    }
+    .link-column{
+        align-items: center;
+    }
+}
+@media screen and (max-width:479px) {
+    h1{
+        font-size: 2rem;
+    }
+    h2{
+        font-size: 1.5rem;
+    }
+    .features-card{
+       min-width:100%;     
+    }
+    .btn{
+        width:70%;
+    }
+    .examples-card{
+        width:100%;
+        height: 180px;
+    }
+    .features-section{
+        padding: 20px;
+    }
 }
