--- a/grid-task/style.css
+++ b/grid-task/style.css
@@ -8,7 +8,7 @@
     gap:20px;
     grid-template-columns: 1fr 1fr 1fr;
     font-family: "Poppins",sans-serif;
-
+   
     /* grid-template-rows: 1fr 1fr 1fr; */
 }
 
@@ -37,7 +37,7 @@
 #box-3{
     grid-row: span 2;
     align-content: center;
-    border-radius: 0px 10;
+    border-radius: 0px 10px;
 }
 .inside{
     display: flex;
