--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 .container{
     margin: 100px auto;
     width:40vw;
-    height: 60vh;
+    /* height: 60vh; */
     border-radius: 40px;
     background-color:purple;
     box-shadow: 1px 1px 30px 20px rgba(255, 192, 203, 0.811);
@@ -31,7 +31,7 @@ body{
     align-items: flex-start;
     gap:10px;
     flex-direction: column;
-    margin-top: -10px;
+    /* margin-top: -10px; */
 }
 .task-detail{
     font-weight: 500;
