--- a/Resturent-website/style.css
+++ b/Resturent-website/style.css
@@ -1,216 +1,324 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
+    /* border: 2px solid; */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;  
+    font-family: 'Poppins', sans-serif;
 }
-:root{
-    --primary-text-color:#39DB4A;
-    --secondary-text-color:#FF6868;
-    --white-color:white;
-    --padding-inline-section:20px;
+
+:root {
+    --primary-text-color: #39DB4A;
+    --secondary-text-color: #FF6868;
+    --white-color: white;
+    --padding-inline-section: 20px;
 }
-h1{
+
+h1 {
     font-size: 3rem;
 }
-h2{
+
+h2 {
     font-size: 2rem;
 }
-h3{
+
+h3 {
     font-size: 1.5rem;
 }
-p{
-    font-family: 'Roboto',sans-serif;
+
+p {
+    font-family: 'Roboto', sans-serif;
     font-size: 1.25rem;
     line-height: 1.8rem;
 }
-a{
+
+a {
     text-decoration: none;
     display: inline-block;
-    color:black;
+    color: black;
     font-weight: 600;
 }
-ul{
+
+ul {
     list-style: none;
 }
 
 /* utility clssess */
-.container{
+.container {
     max-width: 1180px;
     margin-inline: auto;
     padding-inline: 30px;
 }
-.flex{
+
+.flex {
     display: flex;
     align-items: center;
 }
-.green{
-    color:var(--primary-text-color)
+
+.green {
+    color: var(--primary-text-color)
 }
-.white{
-    color:var(--white-color);
+
+.white {
+    color: var(--white-color);
 }
-.toggle-btn{
+
+.toggle-btn {
     display: none;
 }
 
 /* header-section */
-header{
+header {
     position: relative;
 }
+
 /* navbar */
-.navbar{
+.navbar {
     margin-top: 20px;
     justify-content: space-between;
     padding-block: var(--padding-inline-section);
 }
 
-.first-icon{
-    width:fit-content;
+.first-icon {
+    width: fit-content;
     height: max-content;
     padding: 5px;
     border-radius: 10px;
     background-color: var(--primary-text-color);
 }
-.menu{
-    gap:30px;
+
+.menu {
+    gap: 30px;
 }
-.other-menu{
-   margin-left: 150px;
+
+.other-menu {
+    margin-left: 150px;
 }
-.contact{
+
+.contact {
     padding: 10px 20px;
     background-color: var(--primary-text-color);
     border-radius: 30px;
-    gap:10px;
+    gap: 10px;
 }
 
 /* hero section */
-.hero-section{
-    gap:50px;
+.hero-section {
+    gap: 50px;
     margin-top: 20px;
 }
-.left-side{
+
+.left-side {
     flex-basis: 42%;
     flex-direction: column;
-    gap:30px;
+    gap: 30px;
+    align-items: center;
     /* padding-left: 30px; */
     /* overflow: hidden; */
 }
 
-.left-side p{
+.left-side p {
     line-height: 2;
     font-weight: 500;
     opacity: 0.8;
 }
-.btn{
-    gap:30px;
+
+.btn {
+    gap: 30px;
     margin-right: 30px;
 }
-.btn-order{
-    /* width:40%; */
+
+.btn-order {
+    width:40%;
     background-color: var(--primary-text-color);
-    color:var(--white-color);
+    color: var(--white-color);
     padding: 12px 35px;
     border-radius: 40px;
     box-shadow: 0 10px 30px #8EFF9A;
 }
-.watch-btn{
+
+.watch-btn {
     font-size: 18px;
     opacity: 0.6;
-    
+    width: 128px;
 }
-.play-btn{
-    background-color:#ffffff;
+
+.play-btn {
+    background-color: #ffffff;
     border-radius: 40px;
-    width:60px;
+    width: 60px;
     height: 60px;
     box-shadow: 0 18px 10px #00000016;
-    padding: 24px;
+    padding: 20px;
 }
-.right-side{
+
+.right-side {
     position: relative;
     flex-basis: 50%;
     /* overflow: hidden; */
 }
-.circle{
-      position: absolute;
+
+.circle {
+    position: absolute;
     width: 80%;
-    top: 20%;
-    left:20%;
+    top: 21%;
+    left: 20%;
 }
-.girl-img{
+
+.girl-img {
     position: relative;
     z-index: 1;
-    width: 90%;
+    width: 90.4%;
     left: 11%;
 }
-.spicy{
+
+.spicy {
     position: absolute;
     top: 25%;
     right: 60%;
-    width: 50%;
+    width: 45%;
 }
-
-.rect{
+/* ads */
+.ads{
+    display: flex;
+    gap:10px;
+    flex-basis: 50%;
+}
+.rect {
     position: absolute;
-    width: 62%;
+    width: 60%;
     top: 90%;
     z-index: 1;
-    left: 1%;
+    left: 0;
 }
-.food{
+
+.food {
     width: 16%;
     height: 13%;
     z-index: 1;
     top: 95%;
     position: absolute;
-    left: 10%;
+    left: 8%;
 }
-.ad{
+
+.ad {
     position: absolute;
     width: 21%;
     z-index: 1;
-    left: 30%;
+    left: 28%;
     top: 95%;
 }
 
-.rect1{
+.rect1 {
     position: absolute;
     width: 62%;
     top: 90%;
-    left:54%;
+    left: 48%;
     z-index: 1;
 }
-.food2{
+
+.food2 {
     width: 16%;
     height: 14%;
     z-index: 1;
     position: absolute;
-    left: 62%;
-    top:94%;
+    left: 56%;
+    top: 94%;
     padding-top: 3px;
 }
-.text{
+
+.text {
     z-index: 1;
     position: absolute;
-    left: 81%;
-    top: 95%;
+    left: 75%;
+    top: 96%;
     width: 24%;
 }
-.star{
+
+.star {
     z-index: 1;
     position: absolute;
-    left: 81%;
-    top: 99%;
+    left: 75%;
+    top: 100%;
     width: 16%;
 }
-.doller{
+
+.doller {
     z-index: 1;
     position: absolute;
-    left: 81%;
-    top: 103%;
+    left: 75%;
+    top: 104%;
     width: 11%;
+}
+
+/* category section */
+.category{
+    flex-direction: column;
+}
+.category-heading {
+    margin-top: 200px;
+    /* flex-direction: column; */
+}
+
+.category-heading p {
+    color: var(--secondary-text-color);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 700;
+}
+
+.category-heading h2 {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 46px;
+}
+
+.category-card {
+    /* flex-direction: column; */
+    gap: 30px;
+    justify-content: center;
+}
+
+.card {
+    /* flex-basis: 20%; */
+    width: 248px;
+    text-align: center;
+    margin-top: 20px;
+    position: relative;
+    box-shadow: 2px 10px 18px #0000001A;
+    padding: 10px;
+    border-radius: 40px;
+    flex-direction: column;
+    gap:20px;
+    padding: 20px 40px;
+}
+.card1 img{
+    width:70%;
+    
+}
+
+
+.img {
+    justify-content: center;
+    /* position: absolute; */
+    border-radius: 70px;
+    width: 120px;
+    height: 120px;
+    background-color: #C1F1C6;
+    text-align: center;
+    padding: 8px;
+}
+/* .img-4{
+    width: 55%;
+    padding: 20px !important;
+} */
+.heading {
+    font-weight: 600;
+    font-size: 30px;
+}
+
+.dishes {
+    opacity: 0.8;
 }
