--- a/Resturent-website/media.css
+++ b/Resturent-website/media.css
@@ -3,28 +3,34 @@
     /* .container{
         overflow: hidden;
     } */
-    
-    h1{
+
+    h1 {
         font-size: 1.8rem;
     }
-    h3{
+
+    h3 {
         font-size: 1.2rem;
     }
-    p{
+
+    p {
         font-size: 1rem;
     }
-    .toggle-btn{
+
+    .toggle-btn {
         display: block;
-    }   
-    .toggle-btn img{
+    }
+
+    .toggle-btn img {
         height: 28px;
         width: 28px;
-    } 
-    .main-nav{
+    }
+
+    .main-nav {
         overflow: initial;
         margin-top: 0;
     }
-    .menu{
+
+    .menu {
         justify-content: flex-start;
         flex-direction: column;
         width: 100%;
@@ -37,91 +43,224 @@
         margin-top: 474px;
         backdrop-filter: blur(10px);
     }
-    .other-menu{
+
+    .other-menu {
         margin-left: 0;
     }
-    .menu.active{
-        left:0;
+
+    .menu.active {
+        left: 0;
     }
-    .hero-section{
+
+    .hero-section {
         flex-direction: column-reverse;
     }
-    .left-side{
+
+    .left-side {
         text-align: center;
         padding-left: 0px;
         margin-top: 130px;
     }
-    .rect{ left: -6%;}
-    .food{        left: 4%;}
-    .ad{        left: 22%;}
-    .rect1{left: 42%;}
-    .food2{left:52%;}
-    .text{
-        left:70%;
+
+    .rect {
+        left: -6%;
     }
-    .star{ left:70%;}
-    .doller{ left:70%;}
-    .play-btn{padding: 22px;}
-    .category-heading{
+
+    .food {
+        left: 4%;
+    }
+
+    .ad {
+        left: 22%;
+    }
+
+    .rect1 {
+        left: 42%;
+    }
+
+    .food2 {
+        left: 52%;
+    }
+
+    .text {
+        left: 70%;
+        top: 95%;
+    }
+
+    .star {
+        left: 70%;
+    }
+
+    .doller {
+        left: 70%;
+    }
+
+    .play-btn {
+        padding: 22px;
+    }
+
+    .category-heading {
         margin-top: 90px;
     }
-    .category-card{
+
+    .category-card {
         /* width:48%;    */
         flex-basis: 48%;
-        gap:30px;
+        gap: 30px;
     }
+    .img1{
+        top:0;
+    }
+    .feature-section {
+        flex-direction: column;
+    }
+    .right-feature{
+       text-align: center;
+    }
+    .head{
+        margin: auto;
+    }
+    .h3{
+        font-size: 2rem;
+        margin: auto;
+    }
+   .feedback{
+    margin-left: 150px;
+   }
+   .feed{
+    margin-left: 40px;
+   }
+   .h3{
+    font-size: 1.5rem;
+   }
+   .big-feature{
+    flex-direction: column;
+    margin-top: 271px;
+    gap: 10px;
+    text-align: center;
+   }
+   .feature-section{
+    gap:30px;
+}
+.right-feature{
+    gap:20px;
+}
+.feedback{
+    margin-left: 20%;
+    /* margin: auto; */
+}
+.feed{
+    margin-left: 6%;
+    bottom: 6%;
+}
+.left a{
+    margin: auto;
+}
+.big-feature{
+    gap:50px;
+}
 }
 
 /* media query for phone */
 @media screen and (max-width:479px) {
-   
-    h1{
+
+    h1 {
         font-size: 1.5rem;
     }
-    h2{
+
+    h2 {
         font-size: 1.2rem;
     }
-    .hero-section{
+
+    .hero-section {
         flex-direction: column-reverse;
-        gap:100px;
+        gap: 100px;
     }
-   .btn{
-    margin-right: 0;
+
+    .btn {
+        margin-right: 0;
+    }
+
+    .left-side {
+        margin-top: 0;
+    }
+
+    .btn-order {
+        width: 30%;
+        font-size: 12px;
+        padding: 6px;
+    }
+
+    .watch-btn {
+        width: 24%;
+        font-size: 14px;
+    }
+
+    .play-btn {
+        width: 47px;
+        height: 45px;
+        padding: 17px;
+    }
+    .feedback{
+        margin-left: 25px;
+    }
+    .feed{
+        margin-top: 20px;
+        left: 5%;
+        top:100%;
+        
+    }
+    .right-side {
+        margin-top: 0;
+    }
+    .big-feature{
+        margin-top: 100px;
+        gap:50px;
+    }
+    .left{
+        margin-top: 90px;
+    }
+   .right{
+    grid-template-columns: 250px;
    }
-   .left-side{
-    margin-top: 0;
-   }
-   .btn-order{width: 30%;
-    font-size: 12px;
-    padding: 6px;}
-   .watch-btn{width: 24%;
-    font-size: 14px;}
-   .play-btn{width: 47px;
-    height: 45px;
-    padding: 17px;}
 }
-.right-side{
-    margin-top: 0;
-}
+
 
 @media screen and (max-width:320px) {
 
-    .navbar{
-        margin-top:0px;
+    .navbar {
+        margin-top: 0px;
         justify-content: space-between;
     }
+
     /* .container{
     } */
-    .category-heading p{
+    .category-heading p {
         font-size: 13px;
     }
-    .category-heading h2{
+
+    .category-heading h2 {
         font-size: 25px;
     }
-    .category-card{
+
+    .category-card {
         flex-direction: column;
     }
-    .heading{
+
+    .heading {
         font-size: 20px;
+    }
+
+    .left-feature {
+        margin-right: 10%;
+    }
+
+    .img1 {
+        top: 2%;
+    }
+
+    .text1{
+        font-size: 0.4rem;
+        text-align: center;
     }
 }
