some change of style sheet

--- a/Restaurant/media.css
+++ b/Restaurant/media.css
@@ -280,12 +280,13 @@
     }
 
     footer {
-        margin-top: 0;
+        margin-top: 10px;
+        padding-block: 10px;
     }
 
     .footer-container {
         flex-direction: column;
-        gap: 40px;
+        gap: 25px;
         align-items: center;
     }
 
@@ -316,6 +317,7 @@ text-align: center;
 
     .slider-btn {
         align-items: center;
+        justify-content: center;
     }
 
     .menus {
