--- a/Restaurant/style.css
+++ b/Restaurant/style.css
@@ -28,7 +28,7 @@ h3 {
 }
 
 p {
-    font-family: 'Roboto', sans-serif;
+   
     font-size: 1.25rem;
     line-height: 1.8rem;
 }
@@ -42,6 +42,10 @@ a {
 
 ul {
     list-style: none;
+}
+button{
+    background-color: #fff;
+    border: none;
 }
 
 /* utility clssess */
@@ -155,18 +159,20 @@ header {
 }
 
 .btn-order {
-    width: 40%;
+  
     background-color: var(--primary-text-color);
     color: var(--white-color);
     padding: 12px 35px;
     border-radius: 40px;
     box-shadow: 0 10px 30px #8EFF9A;
+    border: none;
 }
 
 .watch-btn {
     font-size: 18px;
     opacity: 0.6;
     width: 128px;
+    
 }
 
 .play-btn {
@@ -389,12 +395,15 @@ header {
     gap:80px;
    
 } */
+ /* slider */
 .menus{
     gap:30px;
     margin-top: 40px;
     margin-bottom: 40px;
     margin-left: 100px;
+    flex-wrap: wrap;
 }
+
 
 .menu-card{
     width:28%;
@@ -409,6 +418,17 @@ header {
  margin-left: 20px;
  
 }
+.hearts{
+    position: absolute;
+    top:0;
+
+}
+/* .hearts img{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+} */
 .menu-rect{
     position: absolute;
     right: 0;
@@ -604,6 +624,7 @@ footer {
 .footer-container {
     align-items: flex-start;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .footer-logo {
@@ -644,7 +665,7 @@ footer {
 
 .subfooter-container {
     justify-content: center;
-    gap: 50px;
+    gap: 25px;
     flex-wrap: wrap;
 }
 
