--- a/UsabilityHub Clone/style.css
+++ b/UsabilityHub Clone/style.css
@@ -2,68 +2,80 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); */
 
 /* Reset */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-:root{
-    --primary-text-color:#183b56;
-    --secondary-text-color:#577592;
-    --accent-color:#2294ed;
-    --accent-color-dark:#1d69a3;
-    --padding-inline-section:20px;
+
+:root {
+    --primary-text-color: #183b56;
+    --secondary-text-color: #577592;
+    --accent-color: #2294ed;
+    --accent-color-dark: #1d69a3;
+    --padding-inline-section: 20px;
 }
-body{
-    font-family: 'Poppins',sans-serif;
-    color:var(--primary-text-color);
+
+body {
+    font-family: 'Poppins', sans-serif;
+    color: var(--primary-text-color);
 }
-h1{
+
+h1 {
     font-size: 3rem;
 }
-h2{
+
+h2 {
     font-size: 2rem;
 }
-h3{
+
+h3 {
     font-size: 1.5rem;
 }
-p{
-    font-family: 'Roboto',sans-serif;
+
+p {
+    font-family: 'Roboto', sans-serif;
     font-size: 1.25rem;
     color: var(--secondary-text-color);
     line-height: 1.8rem;
 }
-a{
+
+a {
     text-decoration: none;
     display: inline-block;
 }
-ul{
+
+ul {
     list-style: none;
 }
 
 /* utility classes */
-.small-bold-text{
+.small-bold-text {
     font-size: 1rem;
     font-weight: 700;
 }
 
-.container{
+.container {
     max-width: 1180px;
     margin-inline: auto;
     padding-inline: var(--padding-inline-section);
 }
-.flex{
+
+.flex {
     display: flex;
     align-self: center;
 }
-.hover-link{
-    color:var(--primary-text-color);
+
+.hover-link {
+    color: var(--primary-text-color);
     transition: 0.2s ease-out;
 }
-.hover-link:hover{
+
+.hover-link:hover {
     color: var(--accent-color);
 }
-.primary-button{
+
+.primary-button {
     background-color: var(--accent-color);
     border-radius: 6px;
     font-weight: 700;
@@ -71,15 +83,18 @@ ul{
     padding: 15px 24px;
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition: 0.2s ease-out;
-    font-size:1.1rem;
+    font-size: 1.1rem;
 }
-.primary-button:hover{
+
+.primary-button:hover {
     background-color: var(--accent-color-dark);
 }
-.m1{
+
+.m1 {
     margin-top: -15px;
 }
-.secondary-button{
+
+.secondary-button {
     background-color: white;
     border: 1px solid black;
     border-radius: 6px;
@@ -87,325 +102,390 @@ ul{
     color: black;
     padding: 15px 24px;
     transition: 0.2s ease-out;
-    font-size:1.1rem;
+    font-size: 1.1rem;
 }
-.secondary-button:hover{
+
+.secondary-button:hover {
     color: var(--accent-color);
     border-color: var(--accent-color);
 }
 
 /* top banner */
-.banner-text{
+.banner-text {
     text-align: center;
-   color:white;
-   padding: 15px 30px;
+    color: white;
+    padding: 15px 30px;
 }
-.top-banner{
+
+.top-banner {
     background-color: #4fb3d4;
     background-image: url("asset/asset\ 30.png");
     background-size: 300px;
 }
 
 /* nav bar */
-.main-nav{
+.main-nav {
     margin-top: 20px;
     justify-content: space-between;
     position: relative;
 }
-.company-logo img{
+
+.company-logo img {
     width: 200px;
 }
-.nav-links{
+
+.nav-links {
     flex-basis: 700px;
     margin-top: 12px;
     /* font-weight: 600; */
     /* font-size: 1.1dvi; */
 }
-.nav-links ul{
+
+.nav-links ul {
     justify-content: end;
-    gap:40px;
+    gap: 40px;
 }
-.toggle-btn{
+
+.toggle-btn {
     display: none;
 }
+
 /* header section */
-header{
+header {
     padding: 50px var(--padding-inline-section) 0;
 }
-.header-section{
+
+.header-section {
     justify-content: center;
-    gap:50px;
+    gap: 50px;
 }
-.header-right img{
-    width:100%;
+
+.header-right img {
+    width: 100%;
 }
-.header-left{
-   width: 40vw;
-   flex-direction: column;
-   gap:20px;
+
+.header-left {
+    width: 40vw;
+    flex-direction: column;
+    gap: 20px;
 
 }
+
 /* .header-left h1{
     margin-top: 120px
 }
 .header-left p{
     margin-top: 8px
 }*/
-.header-left a{
-  width:60%;
-  text-align: center;
+.header-left a {
+    width: 60%;
+    text-align: center;
 }
+
 /* company section */
-.company-header{
+.company-header {
     text-align: center;
     margin-block: 30px;
     color: var(--primary-text-color);
 }
-.logos{
+
+.logos {
     justify-content: space-evenly;
     flex-wrap: wrap;
-    gap:20px;
+    gap: 20px;
 }
-.logo{
+
+.logo {
     height: 46px;
 }
+
 /*. features section */
-.features-section{
+.features-section {
     padding: 80px var(--padding-inline-section) 0;
     background-image: url("./asset/asset\ 32.svg");
     background-repeat: no-repeat;
     background-position: center;
 }
-.features-header{
+
+.features-header {
     text-align: center;
 }
-.features-header h2{
+
+.features-header h2 {
     margin-bottom: 20px;
 }
-.features-area{
+
+.features-area {
     flex-wrap: wrap;
-   justify-content: space-between;
-   gap:20px;
-   margin-top: 20px;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 20px;
 }
-.features-card{
+
+.features-card {
     flex-direction: column;
-    gap:20px;
+    gap: 20px;
     max-width: 30%;
     text-align: center;
 }
-.btn{
+
+.btn {
     margin: auto;
-    width:60%;
+    width: 60%;
 }
+
 /* big feature section */
-.big-feature-section{
+.big-feature-section {
     padding: 30px var(--padding-inline-section) 0;
 
 }
-.big-feature-container{
-    gap:30px;
+
+.big-feature-container {
+    gap: 30px;
 }
-.feature-img img{
+
+.feature-img img {
     width: 100%;
 }
-.feature-desc{
+
+.feature-desc {
     flex-direction: column;
     align-items: flex-start;
-    gap:8px;
+    gap: 8px;
 }
-.big-feature-container-2{
+
+.big-feature-container-2 {
     flex-direction: row-reverse;
 }
+
 /* examples section */
-.examples-header{
+.examples-header {
     text-align: center;
 }
-.examples-header h2{
+
+.examples-header h2 {
     margin-bottom: 20px;
 }
-.example-area{
+
+.example-area {
     justify-content: space-between;
     margin-block: 30px;
     flex-wrap: wrap;
 }
-.examples-card{
-    width:23%;
+
+.examples-card {
+    width: 23%;
     position: relative;
     height: 300px;
     background: black;
-    background:linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)), url("./asset/asset\ 35.jpeg");
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url("./asset/asset\ 35.jpeg");
     background-size: cover;
     transition: 0.2s ease-out;
 }
-.examples-card:hover{
+
+.examples-card:hover {
     box-shadow: 0 0 10px #888;
 }
-.card-text{
+
+.card-text {
     position: absolute;
     bottom: 20px;
-    left:20px;
+    left: 20px;
     right: 20px;
-    color:white;
+    color: white;
 }
-.examples-card:nth-child(2){
-    background:linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)), url("./asset/asset\ 34.jpeg");
+
+.examples-card:nth-child(2) {
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url("./asset/asset\ 34.jpeg");
     background-size: cover;
 }
-.examples-card:nth-child(3){
-    background:linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)), url("./asset/asset\ 36.jpeg");
+
+.examples-card:nth-child(3) {
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url("./asset/asset\ 36.jpeg");
     background-size: cover;
 }
-.examples-card:nth-child(4){
-    background:linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)), url("./asset/asset\ 37.jpeg");
+
+.examples-card:nth-child(4) {
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url("./asset/asset\ 37.jpeg");
     background-size: cover;
 }
+
 /* cta section */
-.cta-section{
+.cta-section {
     background-color: #183b54;
     padding: 120px var(--padding-inline-section) 80px;
 }
-.cta-section-container{
+
+.cta-section-container {
     flex-direction: column;
-   text-align: center;
-   color: white;
-    gap:20px;
+    text-align: center;
+    color: white;
+    gap: 20px;
 }
-.cta-section-container p{
-    color:white;
+
+.cta-section-container p {
+    color: white;
     margin-top: 20px;
 }
-.button{
-    margin:auto;
-    min-width:100px;
+
+.button {
+    margin: auto;
+    min-width: 100px;
 }
+
 /* footer */
-footer{
+footer {
     padding-block: 80px;
     background-color: #ebf2fa;
 }
 
-.footer-container{
+.footer-container {
     align-items: flex-start;
     justify-content: space-between;
 }
-.link-column{
+
+.link-column {
     flex-direction: column;
-    
-    gap:20px;
+
+    gap: 20px;
     align-self: auto;
 }
+
 /* sub footer */
-.sub-footer{
+.sub-footer {
     background-color: #b9cde4;
     padding: var(--padding-inline-section);
 }
-.subfooter-container{
+
+.subfooter-container {
     justify-content: center;
-    gap:30px;
+    gap: 30px;
     flex-wrap: wrap;
 }
 
 /* Media querys */
 @media screen and (max-width:991px) {
-    .container{
+    .container {
         overflow: hidden;
     }
-    h3{
-    font-size: 1.2rem;
-   }
-    .toggle-btn{
+
+    h3 {
+        font-size: 1.2rem;
+    }
+
+    .toggle-btn {
         display: block;
-    }   
-    .toggle-btn img{
+    }
+
+    .toggle-btn img {
         height: 28px;
         width: 28px;
-    } 
-    .main-nav{
+    }
+
+    .main-nav {
         overflow: initial;
     }
-    .nav-links{
+
+    .nav-links {
         position: absolute;
-    background-color: white;
-     left:-100%;
-     text-align: center;
+        background-color: white;
+        left: -100%;
+        text-align: center;
         top: 100%;
-        width:100%;
+        width: 100%;
         padding-block: 20px;
     }
-    .nav-links.active{
-        left:0;
+
+    .nav-links.active {
+        left: 0;
     }
-    .nav-links ul{
+
+    .nav-links ul {
         flex-direction: column;
 
     }
-    
-    .example-area{
-        gap:20px;
+
+    .example-area {
+        gap: 20px;
     }
-    .examples-card{
-        width:48%;
+
+    .examples-card {
+        width: 48%;
         height: 180px;
     }
-    .cta-section{
+
+    .cta-section {
         padding-block: 80px;
     }
 }
+
 @media screen and (max-width:767px) {
-    .header-section{
+    .header-section {
         flex-direction: column-reverse;
         justify-content: flex-start;
     }
-    .header-left{
+
+    .header-left {
         width: 100%;
         align-items: flex-start;
         justify-content: flex-start;
     }
-    .header-left a{
-        width:100%;
+
+    .header-left a {
+        width: 100%;
         text-align: center;
-      }
-      .features-card{
-        min-width:calc(50% - 10px);
-      }
-      .big-feature-container{
-        flex-direction: column;
-      }
-    
-    .big-feature-container-2{
-      flex-direction: column;
     }
-    .examples-section{
+
+    .features-card {
+        min-width: calc(50% - 10px);
+    }
+
+    .big-feature-container {
+        flex-direction: column;
+    }
+
+    .big-feature-container-2 {
+        flex-direction: column;
+    }
+
+    .examples-section {
         margin-top: 20px;
     }
-    .footer-container{
+
+    .footer-container {
         flex-direction: column;
-        gap:40px;
+        gap: 40px;
         align-items: center;
     }
-    .link-column{
+
+    .link-column {
         align-items: center;
     }
 }
+
 @media screen and (max-width:479px) {
-    h1{
+    h1 {
         font-size: 2rem;
     }
-    h2{
+
+    h2 {
         font-size: 1.5rem;
     }
-    .features-card{
-       min-width:100%;     
+
+    .features-card {
+        min-width: 100%;
     }
-    .btn{
-        width:70%;
+
+    .btn {
+        width: 70%;
     }
-    .examples-card{
-        width:100%;
+
+    .examples-card {
+        width: 100%;
         height: 180px;
     }
-    .features-section{
+
+    .features-section {
         padding: 20px;
     }
 }
