--- a/Bootstrap-task/style.css
+++ b/Bootstrap-task/style.css
@@ -3,209 +3,274 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-    /* border: 2px solid; */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  /* border: 2px solid; */
 }
-p{
-    font-family: "Josefin Sans", sans-serif;
+
+p {
+  font-family: "Josefin Sans", sans-serif;
 }
-.header{
-    background-image: url("./img/Background Image.png");
-    width: 100%;
-    position: relative;
+
+.header {
+  background-image: url("./img/Background Image.png");
+  width: 100%;
+  position: relative;
 }
-.logo{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+
+.logo {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
-.logo img{
-    width:90%;
-    height:99px;
-    object-fit: cover;
+
+.logo img {
+  width: 90%;
+  height: 99px;
+  object-fit: cover;
 }
-.btn{
-    width: 130px;
-    height: 55px;
-    padding: 5px !important;
+
+.btn {
+  width: 130px;
+  height: 45px;
+  /* padding: 4px !important; */
 }
+
+.navbar {
+  height: 60px !important;
+}
+
 /* hero section */
 
-.left{
-    align-items: center;
-    flex-basis: 50%;
-}
-.right{
-    flex-basis: 50%;
+.left {
+  align-items: center;
+  flex-basis: 50%;
 }
 
-.borders{
-    width:100%;
-    border:13px solid #7572FF;
-}
-.inner-box{
-    position: relative;
-    right: 6%;
-}
-.about-second{
-    gap:4rem;
-}
-.left-img{
-    flex-basis: 50%;
-}
-.left-img img{
-    width:100%;
-}
-.about-cols{
-    flex-basis: 50%;
-}
-.feature-section{
-    background-image: url("./img/Background Image.png");
+.right {
+  flex-basis: 50%;
 }
 
-.first{
-    gap:10rem;
-    text-align: end;
+.borders {
+  width: 100%;
+  border: 13px solid #7572FF;
 }
-.third{
-    gap:10rem;
+
+.inner-box {
+  position: relative;
+  right: 6%;
 }
-.image{
-    width: 55px;
-    text-align: end;
+/* about section */
+
+
+.about-second {
+  gap: 4rem;
 }
-.img{
-    width:50px;
+
+.left-img {
+  flex-basis: 50%;
 }
+
+.left-img img {
+  width: 70%;
+}
+
+.about-cols {
+  flex-basis: 50%;
+}
+
+.feature-section {
+  background-image: url("./img/Background Image.png");
+}
+
+.first {
+  gap: 10rem;
+  text-align: end;
+}
+
+.third {
+  gap: 10rem;
+}
+
+.image {
+  width: 55px;
+  text-align: end;
+}
+
+.img {
+  width: 50px;
+}
+
 .swiper {
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    gap:10px;
-  }
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  gap: 10px;
+}
 
-  .swiper-slide {
-    background-position: center;
-    background-size: cover;
-    width: 300px !important;
-    align-items: center;
-    justify-content: center;
-  }
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px !important;
+  align-items: center;
+  justify-content: center;
+}
 
-  .swiper-slide img {
-    /* display: block; */
-    width: 100%;
-  }
-  /* download section */
-  .content{
-    flex-basis: 50%;
-  }
-  .img-section{
-    flex-basis: 50%;
-  }
-  /* uses of app */
-  .app-use{
-    background-image: url("./img/Background Image.png");
-    height: 380px;
-  }
-  .paragraph{
-    width:50%;
-    text-align: center;
-  }
-  .set-video{
-    position: absolute;
-    top:-50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-  }
-  .set-video iframe{
-    width: 500px;
-    height: 300px;
-    margin-bottom: 5rem;
-    object-fit: contain;
-    border-radius: 10px;
-  }
-  .team-section{
-    margin-top: 6rem;
-  }
-  .border-img{
-    background-image: url("./img/Group\ 1513.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 11px;
-  }
-  /* customer section */
-  .customer-section{
-    background-image: url("./img/Background Image.png");
-  }
+.swiper-slide img {
+  /* display: block; */
+  width: 100%;
+}
+
+/* download section */
+.content {
+  flex-basis: 50%;
+}
+
+.img-section {
+  flex-basis: 50%;
+}
+.col-color{
+  background-color: #5851EA;
+  color:white;
+}
+
+/* uses of app */
+.app-use {
+  background-image: url("./img/Background Image.png");
+  height: 380px;
+}
+
+.paragraph {
+  width: 50%;
+  text-align: center;
+}
+
+.set-video {
+  position: absolute;
+  top: -50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.set-video iframe {
+  width: 500px;
+  height: 300px;
+  margin-bottom: 5rem;
+  object-fit: contain;
+  border-radius: 10px;
+}
+
+.team-section {
+  margin-top: 6rem;
+}
+
+.border-img {
+  background-image: url("./img/Group\ 1513.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 11px;
+}
+
+/* customer section */
+.customer-section {
+  background-image: url("./img/Background Image.png");
+}
 
 
 
 @media screen and (max-width:1240px) {
 
-    .first{
-       padding: 10px !important;
-    }
-    
+  .first {
+    padding: 10px !important;
+  }
+  .inner-box{
+    right: 12%;
+  }
+
 }
 
 @media screen and (max-width:793px) {
-    .header{
-        padding-top: 20px !important;
-    }
-  
-    .logo img{
-        width:80%;
-        height:90px !important;
-      object-fit: fill;
-    }
-    .upper-nav{
-        position: absolute;
-        left:-150%;
-    }
-    .btn{
-        width:90px;
-        height: max-content;
-        font-size: 13px !important;
-        padding: 8px !important;
-    }
-    .second img{
-        width:75%;
-    }
-    .hero-section{
-        gap:1rem;
-    }
-    .first,.third{
-        text-wrap: wrap !important;
-        gap:2rem;
-        text-align: center;
-    }
-   .img{
-    width:55px;
-   }
-   .customer-suppot{
-    margin-top: 2rem;
-   }
-   .paragraph{
-    width: 100%;
-   }
-   
-}
-@media screen and (max-width:600px) {
-    .app-use{
-        height: 450px;
-      }
-       .set-video iframe{
-        width: 280px;
-        height: 200px;
-        margin-bottom: 5rem;
-      }
-      .team-section{
-        margin-top: 2rem;
-      }
+  .header {
+    padding-top: 20px !important;
+  }
 
+  .navbar {
+    height: 50px !important;
+  }
+
+  .navbar-toggler {
+    height: 30px !important;
+  }
+
+  .navbar-toggler-icon {
+    height: 20px !important;
+    width: 20px !important;
+  }
+
+  .logo img {
+    width: 80%;
+    height: 90px !important;
+    object-fit: fill;
+  }
+
+  .upper-nav {
+    position: absolute;
+    left: -150%;
+  }
+
+  .btn {
+    width: 80px;
+    height: max-content;
+    font-size: 11px !important;
+    padding: 8px !important;
+  }
+
+  .second img {
+    width: 75% !important;
+    height: 100% !important;
+  }
+
+  .hero-section {
+    gap: 1rem;
+  }
+
+  .first,
+  .third {
+    text-wrap: wrap !important;
+    gap: 2rem;
+    text-align: center;
+  
+  }
+
+  .img {
+    width: 55px;
+  }
+
+  .customer-suppot {
+    margin-top: 2rem;
+  }
+
+  .paragraph {
+    width: 100%;
+  }
+
+}
+
+@media screen and (max-width:600px) {
+  .app-use {
+    height: 450px;
+  }
+
+  .set-video iframe {
+    width: 280px;
+    height: 200px;
+    margin-bottom: 5rem;
+  }
+
+  .team-section {
+    margin-top: 2rem;
+  }
 }
