--- a/JavaScript/drag-and-drop/style.css
+++ b/JavaScript/drag-and-drop/style.css
@@ -7,7 +7,7 @@
 .container {
     width: 100%;
     height: 100vh;
-    background:linear-gradient(#cf93f1,#b488ed);
+    background:linear-gradient(#b575da,#b488ed);
    display: flex;
    align-items: center;
    justify-content: center;
